Bug 167803 - column ordering setup problem
Summary: column ordering setup problem
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-31 03:24 UTC by Rodrigo Fresneda
Modified: 2008-08-22 05:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rodrigo Fresneda 2008-07-31 03:24:49 UTC
Version:           1.2.50 (using KDE 4.1.0)
Installed from:    Unspecified Linux
Compiler:          binaries from debian experimental 
OS:                Linux

The  ordering of the columns are not remembered across  launches of akregator.
Comment 1 Teemu Rytilahti 2008-08-22 05:07:21 UTC
Should work now in trunk, will backport later to 4.1 branch. See http://lists.kde.org/?l=kde-commits&m=121937432621829&w=2