- use saveState()/restoreState() for handling the header states. -- The sizes for the feedlist are saved now correctly, as well as the shown items. Also the ordering is saved now. -- Call loadHeaderList only once, now it doesn't display the ugly horizontal scrollbar after being restarted \o/ - adapt subscriptionlistview to use the popupmenu stuff for the headers like articlelistview did already. - move connecting the rmb click on the header to be inside the ctor to avoid multiple connections (and thus multiple popupmenus)

saveState()/restoreState() wasn't used due to some Qt-bug? I only had problem while trying to directly use Settings class to save the settings, with KConfigGroup it works 
just fine. could this be a bug in KConfigXT instead of in Qt?

TODO:
- ArticleListView does not still respect the sizes its entries has been given to, needs to be fixed (perhaps by setting up the headers some other way than directly inside 
setModel()?
- Backporting to 4.1 branch after that's been done.
- Figuring out whether we need feed specific header settings.

CCMAIL:frank.osterfeld@kdemail.net
CCMAIL:l.appelhans@gmx.de
BUG:167803
CCBUG:152702


svn path=/trunk/KDE/kdepim/akregator/; revision=850696